fix : fix TransactionRepository instance and its tests for jpa adjusment